[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/id_card/idcard.png" type="Texture" id=1]
[ext_resource path="res://InteractArea.gd" type="Script" id=2]
[ext_resource path="res://assets/id_card/IDCard.gd" type="Script" id=3]
[ext_resource path="res://assets/Shadow.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 34.0

[node name="IDCard" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 0
position = Vector2( 0, -43 )
texture = ExtResource( 1 )

[node name="InteractArea2D" type="Area2D" parent="."]
position = Vector2( 0, -13 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea2D"]
visible = false
position = Vector2( 0, 13 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Shadow" parent="." instance=ExtResource( 4 )]
visible = false
scale = Vector2( 7, 2 )
[connection signal="interacted" from="InteractArea2D" to="." method="_on_InteractArea2D_interacted"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
